--- a/SpMVC_14_ReadBookV2/src/main/webapp/css/color.css
+++ b/SpMVC_14_ReadBookV2/src/main/webapp/css/color.css
@@ -4,3 +4,13 @@
 	color : #fff;
 	background-color: #3E65FF;
 }
+
+.biz-orange{
+color:#fff;
+background-color:#fa6800;
+}
+
+.biz-red{
+color:#fff;
+background-color:red;
+}
