--- a/SpMVC_14_ReadBookV2/src/main/webapp/css/main-table.css
+++ b/SpMVC_14_ReadBookV2/src/main/webapp/css/main-table.css
@@ -1,5 +1,24 @@
 @charset "UTF-8";
 
+table {
+	border-bottom: 1px solid #ddd;
+	border-collapse: collapse;
+}
+
+td, th {
+	white-space: nowrap;
+	text-align: left;
+	padding: 8px;
+	vertical-align: top;
+}
+
+tr:first-child {
+	border-top: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+	background-color: #f1f1f1;
+}
 /*
 	html tag의 height값을 지정하려면
 	반드시 앞에서 html, body의 height를 지정해 두어야 한다
@@ -19,20 +38,11 @@ table의 header를 고정한 채 body만 scroll 하기
 6. width값이 무너지므로 th, td의 width값을 별도로 지정한다
 */
 #main-table {
-	border-collapse: collapse;
 	width: 90%;
 	height: 100%;
 	margin: 10px auto;
-	border-bottom: 1px solid #ddd;
 	display: block;
 	margin: 10px auto;
-}
-
-#main-table td, #main-table th {
-	white-space: nowrap;
-	text-align: left;
-	padding: 8px;
-	vertical-align: top;
 }
 
 #main-table tbody {
@@ -41,6 +51,10 @@ table의 header를 고정한 채 body만 scroll 하기
 	height: 100%;
 }
 
-#main-table th:nth-of-type(6), #main-table td:nth-of-type(6) {
-	width: 70%;
-}
+#main-table th:nth-of-type(1), #main-table td:nth-of-type(1) {	width: 10%;}
+#main-table th:nth-of-type(2), #main-table td:nth-of-type(2) {	width: 40%;}
+#main-table th:nth-of-type(3), #main-table td:nth-of-type(3) {	width: 30%;}
+#main-table th:nth-of-type(4), #main-table td:nth-of-type(4) {	width: 30%;}
+#main-table th:nth-of-type(5), #main-table td:nth-of-type(5) {	width: 70%;}
+#main-table th:nth-of-type(6), #main-table td:nth-of-type(6) {	width: 70%;}
+#main-table th:nth-of-type(6), #main-table td:nth-of-type(6) {	width: 10%;}
