--- a/SpMVC_14_ReadBookV2/src/main/webapp/css/rbook-main.css
+++ b/SpMVC_14_ReadBookV2/src/main/webapp/css/rbook-main.css
@@ -36,7 +36,6 @@ nav, section {
 	color: white;
 	font-weight: bold;
 	border-bottom: 4px solid transparent;
-	
 	transition: 0.5s ease-in-out;
 }
 
@@ -57,26 +56,119 @@ button {
 	border: none;
 	display: inline-block;
 	padding: 8px 16px;
+	margin: 5px;
 	vertical-align: middle;
 	text-decoration: none;
 	text-align: center;
 	cursor: pointer;
-	
 	white-space: nowrap;
-	
-	color:inherit;
+	color: inherit;
 	background-color: inherit;
 	border-radius: 5px;
+	vertical-align: middle;
 }
 /*
 	!important  강제적으로 적용
 */
-button:hover{
-	color:#000 !important;
+button:hover {
+	color: #000 !important;
 	background-color: #ccc !important;
 }
 
+#modal-box {
+	display: none;
+	position: fixed;
+	z-index: 5;
+	left: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.4);
+	width: 100%;
+	height: 100%;
+}
 
+.modal-header {
+	display: flex;
+}
+
+.modal-header span {
+	color: white;
+	font-size: 30px;
+	font-weight: bold;
+	margin-left: auto;
+	margin-right: 10px;
+	display: inline-block;
+}
+
+.modal-header span:hover {
+	cursor: pointer;
+	color: #000;
+}
+
+#modal-content {
+	position:relative;
+	overflow: auto;
+	width: 80%;
+	margin: 0 auto;
+	
+	background-color:gray;
+	padding:5px 10px;
+	border-radius:20px;
+	
+	animation-name: book-box;
+	animation-duration:0.8s;
+	animation-fill-mode:forwards; 
+	
+	-webkit-animation-name: book-box;
+	-webkit-animation-duration:0.8s;
+	
+	-moz-webkit-animation-name: book-box;
+	-moz-webkit-animation-duration:0.8s;
+	
+	-ms-webkit-animation-name: book-box;
+	-ms-webkit-animation-duration:0.8s;
+	
+}
+
+@keyFrames book-box{
+	from{
+		top:-400px;
+		opacity: 0;
+	}
+	to{
+		top:200px;
+		opacity: 1;
+	}
+}
+@-webkit-keyFrames book-box{
+	from{
+		top:-400px;
+		opacity: 0;
+	}
+	to{
+		top:200px;
+		opacity: 1;
+	}
+}
+@-moz-webkit-keyFrames book-box{
+	from{
+		top:-400px;
+		opacity: 0;
+	}
+	to{
+		top:200px;
+		opacity: 1;
+	}
+}
+@-ms-webkit-keyFrames book-box{
+	from{
+		top:-400px;
+		opacity: 0;
+	}
+	to{
+		top:200px;
+		opacity: 1;
+	}
+}
 
 
 
